# tsxCount

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  count_kmers.py  doxygen.ini  example_calls.sh  generateFakeSequences.py  setupLRZ.sh
.circleci/: config.yml
add_cmake/: FindOpenMP.cmake
analyses/: perform_analyses.py  plot_analyses.py
data/: small_t7.1000.fastq  small_t7.1000.fastq.14.count
src/: main.cpp
src/fastxutils/: FastXReader.cpp  FastXReader.h
src/mains/: main.cpp  main_cas.cpp  main_omp.cpp  main_ompperf.cpp  main_perf.cpp  main_pthread.cpp  main_pthreadperf.cpp  main_serialtsx.cpp  main_tsx.cpp  main_tsxperf.cpp  main_tsxsmall.cpp  testExecution.h  tsx_main.cpp
src/tsxcount/: BijectiveKMapping.cpp  BijectiveKMapping.h  IBijectiveFunction.h  TSXHashMap.cpp  TSXHashMap.h  TSXHashMapCAS.cpp  TSXHashMapCAS.h  TSXHashMapOMP.cpp  TSXHashMapOMP.h  TSXHashMapOMPPerf.cpp  TSXHashMapOMPPerf.h  TSXHashMapOMPPerfCount.h  TSXHashMapPThread.cpp  TSXHashMapPThread.h  TSXHashMapPThreadPerf.cpp  TSXHashMapPThreadPerf.h  TSXHashMapPerf.cpp  TSXHashMapPerf.h  TSXHashMapSerialTSX.cpp  TSXHashMapSerialTSX.h  TSXHashMapTSX.cpp  TSXHashMapTSX.h  TSXHashMapTSXPerf.cpp  TSXHashMapTSXPerf.h  TSXHashMapTSXPerf_EXP.cpp  TSXHashMapTSXPerf_EXP.h  TSXHashMapTSXSmall.cpp  TSXHashMapTSXSmall.h  TSXTypes.cpp  TSXTypes.h  commons.h  tsxutils.h
src/tsxutils/: MemoryPool.cpp  MemoryPool.h  SBigInt.cpp  SBigInt.h  UBigInt.cpp  UBigInt.h
src/utils/: CLParser.cpp  CLParser.h  SequenceUtils.h  Utils.h
